# wpdk

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE.md  MAINTAINERS.md  Makefile  README.md  TODO  VERSION  autorun-spdk.conf  autotest.bat  build-clang.bat  build.bat  build.sh  meson.build  meson_options.txt  workspace.code-workspace
config/: meson.build
doc/: build-spdk-linux.md  build-spdk-msys2.md  build-spdk-wsl.md  build-spdk.md  build-wpdk.md  design.md  mock.md  mocking.md  physical-disk.md  wsl.md
inc/: _mingw.h  _timeval.h  assert.h  dirent.h  errno.h  fcntl.h  getopt.h  ifaddrs.h  inaddr.h  libaio.h  limits.h  meson.build  poll.h  pthread.h  pwd.h  regex.h  sched.h  setjmp.h  signal.h  stdio.h  stdlib.h  strings.h  unistd.h
inc/arpa/: inet.h
inc/net/: if.h
inc/netinet/: in.h  ip.h  tcp.h
inc/openssl/: evp.h  md5.h
inc/sec_api/: stdlib_s.h  string_s.h
inc/sys/: cdefs.h  epoll.h  file.h  ioctl.h  mman.h  resource.h  select.h  socket.h  stat.h  time.h  types.h  uio.h  user.h  wait.h
inc/uuid/: uuid.h
inc/wpdk/: header.h  internal.h  meson.build  types.h  windows.h  wrap.h
include/: _mingw.h  corecrt.h  dirent.h  errno.h  fcntl.h  fnmatch.h  getopt.h  ifaddrs.h  inaddr.h  libaio.h  limits.h  meson.build  netdb.h  poll.h  pthread.h  pwd.h  regex.h  sched.h  semaphore.h  signal.h  stdio.h  stdlib.h  string.h  strings.h  syslog.h  termios.h  unistd.h  wpdklib.h
include/arpa/: inet.h
include/net/: if.h
include/netinet/: in.h  ip6.h  tcp.h
include/next/: setjmp.h
include/openssl/: md5.h
include/sec_api/: stdlib_s.h  string_s.h
include/sys/: _iovec.h  _sigset.h  _types.h  cdefs.h  epoll.h  file.h  ioctl.h  mman.h  platform.h  queue.h  resource.h  select.h  socket.h  stat.h  time.h  uio.h  un.h  user.h  wait.h
include/uuid/: uuid.h
include/wpdk/: header.h  internal.h  types.h  windows.h
scripts/: bashrc.sh  common.sh  copy_libs.bat  gitattributes  map_to_win.py  map_to_wrap.py  meson.build  mksymlinks.sh  pkgdep.bat  sudo.sh  symlink_exe.sh
scripts/patches/: dpdk-bus-pci-nvme-on-Windows-requires-class-id-and-bus.diff  dpdk-kmods-nvme-support-for-netuio-on-Windows.diff  spdk-mk-add-support-for-mingw-builds.diff  spdk-mk-support-file-extension-for-executables.diff  spdk-rfc-when-virt2phys-is-unavailable.diff
scripts/pkg-config/: meson.build
src/: _empty.c  aio.c  dirent.c  empty.c  epoll.c  errno.c  error.c  fatal.c  fcntl.c  file.c  fnmatch.c  getopt.c  ifaddrs.c  inet.c  invalid.c  ioctl.c  libaio.c  log.c  md5.c  meson.build  mman.c  netdb.c  poll.c  pthread.c  pwd.c  regex.c  resource.c  select.c  semaphore.c  signal.c  socket.c  src_exports.def  src_version.map  stack.c  stat.c  stdio.c  stdlib.c  string.c  strings.c  syslog.c  (+9 more)
src/rt/: meson.build
subprojects/: CUnit.wrap
test/: meson.build
test/iscsi/: iscsi_loopback.bat  iscsi_loopback.json  iscsi_nvme.bat  iscsi_nvme.json
test/nvmf/: nvmf_nvme.bat  nvmf_nvme.json  nvmf_tgt.bat  nvmf_tgt.json
test/unit/: dirent_ut.c  error_ut.c  fatal_ut.c  fcntl_ut.c  file_ut.c  ifaddrs_ut.c  include_c_ut.c  include_cpp_ut.cpp  include_ut.c  include_ut.h  ioctl_ut.c  main.c  md5_ut.c  meson.build  netdb_ut.c  pthread_ut.c  pwd_ut.c  resource_ut.c  select_ut.c  semaphore_ut.c  signal_ut.c  socket_ut.c  stat_ut.c  stdio_ut.c  stdlib_ut.c  string_ut.c  strings_ut.c  termios_ut.c  time_ut.c  uio_ut.c  unistd_ut.c  uuid_ut.c
test/unit/include/: arpa_inet_h.c  corecrt_h.c  errno_h.c  fcntl_h.c  getopt_h.c  ifaddrs_h.c  libaio_h.c  net_if_h.c  netdb_h.c  netinet_in_h.c  openssl_md5_h.c  pthread_h.c  sched_h.c  semaphore_h.c  signal_h.c  string_h.c  strings_h.c  sys_cdefs_h.c  sys_file_h.c  sys_ioctl_h.c  sys_select_h.c  sys_uio_h.c  sys_user_h.c  syslog_h.c  unistd_h.c  uuid_uuid_h.c
test/unit/include_c/: _mingw_h.c  arpa_inet_h.c  corecrt_h.c  dirent_h.c  errno_h.c  fcntl_h.c  fnmatch_h.c  getopt_h.c  ifaddrs_h.c  inaddr_h.c  libaio_h.c  limits_h.c  net_if_h.c  netdb_h.c  netinet_in_h.c  netinet_ip6_h.c  netinet_ip_h.c  netinet_tcp_h.c  openssl_md5_h.c  poll_h.c  pthread_h.c  regex_h.c  sched_h.c  semaphore_h.c  setjmp_h.c  signal_h.c  stdio_h.c  stdlib_h.c  string_h.c  strings_h.c  sys_cdefs_h.c  sys_epoll_h.c  sys_file_h.c  sys_ioctl_h.c  sys_mman_h.c  sys_queue_h.c  sys_resource_h.c  sys_select_h.c  sys_socket_h.c  sys_stat_h.c  (+10 more)
test/unit/include_cpp/: _mingw_h.cpp  arpa_inet_h.cpp  corecrt_h.cpp  dirent_h.cpp  errno_h.cpp  fcntl_h.cpp  fnmatch_h.cpp  getopt_h.cpp  ifaddrs_h.cpp  inaddr_h.cpp  libaio_h.cpp  limits_h.cpp  net_if_h.cpp  netdb_h.cpp  netinet_in_h.cpp  netinet_ip6_h.cpp  netinet_ip_h.cpp  netinet_tcp_h.cpp  openssl_md5_h.cpp  poll_h.cpp  pthread_h.cpp  regex_h.cpp  sched_h.cpp  semaphore_h.cpp  setjmp_h.cpp  signal_h.cpp  stdio_h.cpp  stdlib_h.cpp  string_h.cpp  strings_h.cpp  sys_cdefs_h.cpp  sys_epoll_h.cpp  sys_file_h.cpp  sys_ioctl_h.cpp  sys_mman_h.cpp  sys_queue_h.cpp  sys_resource_h.cpp  sys_select_h.cpp  sys_socket_h.cpp  sys_stat_h.cpp  (+10 more)
test/unit/include_tests/: _mingw_h.c  _timeval_h.c  arpa_inet_h.c  assert_h.c  corecrt_h.c  dirent_h.c  errno_h.c  fcntl_h.c  fnmatch_h.c  getopt_h.c  ifaddrs_h.c  inaddr_h.c  libaio_h.c  limits_h.c  meson.build  net_if_h.c  netdb_h.c  netinet_in_h.c  netinet_ip6_h.c  netinet_ip_h.c  netinet_tcp_h.c  openssl_evp_h.c  openssl_md5_h.c  poll_h.c  pthread_h.c  pwd_h.c  regex_h.c  sched_h.c  semaphore_h.c  setjmp_h.c  signal_h.c  stdio_h.c  stdlib_h.c  string_h.c  strings_h.c  sys_cdefs_h.c  sys_epoll_h.c  sys_file_h.c  sys_ioctl_h.c  sys_mman_h.c  (+16 more)
tools/: meson.build
tools/kill/: kill.c  kill.sh  meson.build
