# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2020, MayaData Inc. All rights reserved.
# Copyright (c) 2020, DataCore Software Corporation. All rights reserved.

install_headers(
	'corecrt.h',
	'dirent.h',
	'errno.h',
	'fcntl.h',
	'getopt.h',
	'ifaddrs.h',
	'libaio.h',
	'limits.h',
	'netdb.h',
	'poll.h',
	'pthread.h',
	'regex.h',
	'sched.h',
	'semaphore.h',
	'signal.h',
	'stdio.h',
	'stdlib.h',
	'strings.h',
	'syslog.h',
	'termios.h',
	'unistd.h',
)

install_headers(
	'sys/_iovec.h',
	'sys/_sigset.h',
	'sys/_types.h',
	'sys/cdefs.h',
	'sys/epoll.h',
	'sys/file.h',
	'sys/ioctl.h',
	'sys/mman.h',
	'sys/platform.h',
	'sys/queue.h',
	'sys/resource.h',
	'sys/select.h',
	'sys/socket.h',
	'sys/stat.h',
	'sys/time.h',
	'sys/uio.h',
	'sys/un.h',
	'sys/user.h',
	'sys/wait.h',
	subdir: 'sys'
)

install_headers(
	'arpa/inet.h',
	subdir: 'arpa'
)

install_headers(
	'net/if.h',
	subdir: 'net'
)

install_headers(
	'netinet/in.h',
	'netinet/tcp.h',
	subdir: 'netinet'
)

install_headers(
	'openssl/md5.h',
	subdir: 'openssl'
)

install_headers(
	'uuid/uuid.h',
	subdir: 'uuid'
)
